<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragments.incluirTarefaFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"

            />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="69dp"

        />
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            app:title="" />

        <ImageView
            android:id="@+id/imageViewNome"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutNome"
            android:layout_marginEnd="2dp"

            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutNome"
            app:srcCompat="@drawable/ic_baseline_list_alt_24" />

        <com.google.android.material.textfield.TextInputLayout
            app:helperTextTextColor="#FF0000"
            app:helperText="@string/Campo_Obrigatorio"
            app:errorEnabled="true"
            android:id="@+id/textInputLayoutNome"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="32"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="32"
                android:layout_width="match_parent"
                android:id="@+id/textNome"
                android:hint="@string/nome_da_tarefa"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageViewResponsavel"

            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutResponsavel"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toStartOf="@id/textInputLayoutResponsavel"
            app:srcCompat="@drawable/ic_baseline_person_24" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutResponsavel"
            app:helperTextTextColor="#FF0000"
            app:helperText="@string/Campo_Obrigatorio"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutNome"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutNome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textResponsavel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/responsavel"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="16"
                android:textSize="16sp" />



        </com.google.android.material.textfield.TextInputLayout>




        <ImageView
            android:id="@+id/imageViewData"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutData"
            app:layout_constraintEnd_toStartOf="@id/textInputLayoutData"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/ic_baseline_access_time_24"

            />
    <com.google.android.material.textfield.TextInputLayout
        app:helperText="@string/Campo_Obrigatorio"
        android:focusable="false"
        android:id="@+id/textInputLayoutData"
        app:helperTextTextColor="#FF0000"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutResponsavel"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:layout_marginEnd="160dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutResponsavel"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textData"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/data_para_a_conclusao"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:helperText="@string/Campo_Obrigatorio"
            android:id="@+id/textInputLayoutHora"
            app:helperTextTextColor="#FF0000"
            android:layout_width="0dp"
            android:focusable="false"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutData"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutData"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayoutData"
            android:layout_marginStart="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textHora"
                android:layout_width="match_parent"
                android:hint="@string/hora"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescricao"
            android:minHeight="150dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:helperText="@string/Campo_Obrigatorio"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutHora"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutData"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutData"
            app:layout_constraintBottom_toTopOf="@id/buttonSalvar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descreva_a_tarefa"
                android:lines="3"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button

            android:id="@+id/buttonSalvar"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/backcolor"
            android:text="Salvar"
            android:textColor="#000000"
            app:cornerRadius="20sp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescricao"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="150dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutDescricao"

 />


    </androidx.constraintlayout.widget.ConstraintLayout>

